--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,10 +22,12 @@ Imports:
 Suggests:
     rmarkdown,
     knitr,
-    leaflet (>= 2.0.4.1)
+    leaflet (>= 2.0.4.1),
+    testthat (>= 3.0.0)
 License: GPL-2 | MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 VignetteBuilder: 
     knitr
+Config/testthat/edition: 3
